--- a/dialog/atprk_relicseekercrew.config
+++ b/dialog/atprk_relicseekercrew.config
@@ -47,10 +47,10 @@
             "Hey, are you slackin' off again? Get back t' work! We ain't payin' you for nothin'!... Oh wait, you're not one of ours, sorry.",
             "Huh? Who's there?... Oh, there you are. Didn't see you at first.",
             "Don't get any ideas, pal. If I spot somethin' missing, we're kicking you outta here.",
-            "How many penguins do you need to move a bookcase? No, it's not a setup joke, I'm serious.",
+            "How many Penguins do you need to move a bookcase? No, it's not a setup joke, I'm serious.",
             "It's pretty dangerous out there. Let's just hope we don't run into Dreadwing 'n his crooks.",
             "Say, are you lil' birdies related to those on Earth? You look way too similar, and we've got no records that would explain your origins.",
-            "You penguins are surprisingly industrious as long as you're properly motivated. Many of you have helped us out on our journey.",
+            "You Penguins are surprisingly industrious as long as you're properly motivated. Many of you have helped us out on our journey.",
             "Y'know, with all those artifacts lyin' around, we wouldn't mind a helpin' hand. Or should I say a helpin' flipper?",
             "Howdy, my name is <selfname>. Pleased to meet yet another curious spacefarer!",
             "Space is kinda empty and dispiritin' at times, but if you search long enough, you'll always find somethin' wonderful.",
@@ -365,7 +365,7 @@
             "Our galaxy's indeed full of mysteries and wonders. You never know what you'll find on other planets!",
             "Hello, fellow spacer! Got anything unusual? Some ancient relics, maybe?",
             "Hey, are you slackin' off again? Get back t' work! We ain't payin' you for nothin'!... Oh wait, you're not one of ours, sorry.",
-            "Whoah, you're one tall penguin, that's for sure!",
+            "Whoah, you're one tall Penguin, that's for sure!",
             "Don't get any ideas, pal. If I spot somethin' missing, we're kicking you outta here.",
             "So that's what you Pengukin folks look like! I expected you to be shorter, to be frank... The lack of records on your kind doesn't help much.",
             "It's pretty dangerous out there. Let's just hope we don't run into Dreadwing 'n his crooks.",
@@ -381,13 +381,33 @@
             "Many planets have those small ruins on their surface... Who exactly built them, anyway?",
             "Wanna join the Relic Seekers? We're lookin' for artifacts t' learn the full history of our Universe and such."
           ],
+          "pandorasboxpenguin" : [
+            "Our galaxy's indeed full of mysteries and wonders. You never know what you'll find on other planets!",
+            "Hello, fellow spacer! Got anything unusual? Some ancient relics, maybe?",
+            "Hey, are you slackin' off again? Get back t' work! We ain't payin' you for nothin'!... Oh wait, you're not one of ours, sorry.",
+            "Huh? Who's there?... Oh, there you are. Didn't see you at first.",
+            "Don't get any ideas, pal. If I spot somethin' missing, we're kicking you outta here.",
+            "How many Penguins do you need to move a bookcase? No, it's not a setup joke, I'm serious.",
+            "It's pretty dangerous out there. Let's just hope we don't run into Dreadwing 'n his crooks.",
+            "Say, are you lil' birdies related to those on Earth? You look way too similar, and we've got no records that would explain your origins.",
+            "You Penguins are surprisingly industrious as long as you're properly motivated. Many of you have helped us out on our journey.",
+            "Y'know, with all those artifacts lyin' around, we wouldn't mind a helpin' hand. Or should I say a helpin' flipper?",
+            "Howdy, my name is <selfname>. Pleased to meet yet another curious spacefarer!",
+            "Space is kinda empty and dispiritin' at times, but if you search long enough, you'll always find somethin' wonderful.",
+            "All that stuff 'bout K'Rakoth race still confuses me. What's up with those hypercrates or whatever?",
+            "Ever heard of K'Rakoths? Their race's been puzzlin' us for a while.",
+            "You know there's an elder race of aquatic squids out there? Forgot their name, though... again...",
+            "I can't believe how much the elder races've left behind. As if they didn't care about their property at all.",
+            "Many planets have those small ruins on their surface... Who exactly built them, anyway?",
+            "Wanna join the Relic Seekers? We're lookin' for artifacts t' learn the full history of our Universe and such."
+          ],
           "robopenguin" : [
             "Our galaxy's indeed full of mysteries and wonders. You never know what you'll find on other planets!",
             "Hello, fellow spacer! Got anything unusual? Some ancient relics, maybe?",
             "Hey, are you slackin' off again? Get back t' work! We ain't payin' you for nothin'!... Oh wait, you're not one of ours, sorry.",
-            "Whoah, you're one tall penguin, that's for sure!",
+            "Whoah, you're one tall Penguin, that's for sure!",
             "Don't get any ideas, pal. If I spot somethin' missing, we're kicking you outta here.",
-            "Err... What are you, a penguin? A Glitch? Somethin' in between?... I've never seen anyone like you...",
+            "Err... What are you, a Penguin? A Glitch? Somethin' in between?... I've never seen anyone like you...",
             "It's pretty dangerous out there. Let's just hope we don't run into Dreadwing 'n his crooks.",
             "What a strange-lookin' Glitch. You alright here? Feelin' well?",
             "How intriguing! We've got no records on Glitch-Penguin hybrids! Mind if I ask you some questions about your origins?",
@@ -420,26 +440,6 @@
             "I can't believe how much the elder races've left behind. As if they didn't care about their property at all.",
             "You know why I joined the Relic Seekers? There're so many gaps in Novakid history that I doubt it's even real.",
             "Wanna join the Relic Seekers? We're lookin' for artifacts t' learn the full history of our Universe and such."
-          ],
-	  "pandorasboxpenguin" : [
-            "Our galaxy's indeed full of mysteries and wonders. You never know what you'll find on other planets!",
-            "Hello, fellow spacer! Got anything unusual? Some ancient relics, maybe?",
-            "Hey, are you slackin' off again? Get back t' work! We ain't payin' you for nothin'!... Oh wait, you're not one of ours, sorry.",
-            "Huh? Who's there?... Oh, there you are. Didn't see you at first.",
-            "Don't get any ideas, pal. If I spot somethin' missing, we're kicking you outta here.",
-            "How many penguins do you need to move a bookcase? No, it's not a setup joke, I'm serious.",
-            "It's pretty dangerous out there. Let's just hope we don't run into Dreadwing 'n his crooks.",
-            "Say, are you lil' birdies related to those on Earth? You look way too similar, and we've got no records that would explain your origins.",
-            "You penguins are surprisingly industrious as long as you're properly motivated. Many of you have helped us out on our journey.",
-            "Y'know, with all those artifacts lyin' around, we wouldn't mind a helpin' hand. Or should I say a helpin' flipper?",
-            "Howdy, my name is <selfname>. Pleased to meet yet another curious spacefarer!",
-            "Space is kinda empty and dispiritin' at times, but if you search long enough, you'll always find somethin' wonderful.",
-            "All that stuff 'bout K'Rakoth race still confuses me. What's up with those hypercrates or whatever?",
-            "Ever heard of K'Rakoths? Their race's been puzzlin' us for a while.",
-            "You know there's an elder race of aquatic squids out there? Forgot their name, though... again...",
-            "I can't believe how much the elder races've left behind. As if they didn't care about their property at all.",
-            "Many planets have those small ruins on their surface... Who exactly built them, anyway?",
-            "Wanna join the Relic Seekers? We're lookin' for artifacts t' learn the full history of our Universe and such."
           ]
         },
         "penguin" : {
@@ -452,13 +452,13 @@
             "You're a Protector, I guess? What do you protect if the the Earth's, you know, not exactly whole?",
             "All these glowin' nerds talk about is some ancient races. Seems to be their favorite subject.",
             "Ay, buddy, can you lend a dubloon? No? Well, I tried.",
-            "What are you lookin' at, fella? Never seen a talkin' penguin before?",
+            "What are you lookin' at, fella? Never seen a talkin' Penguin before?",
             "Some things are better off forgotten, yet these glowing guys over there keep diggin' them up.",
             "The Ancients, K'Rakoths, the Ruin... How do you even keep track on all those countless elder beings?",
             "I used to work for Dreadwing, and compared to these Novakids, he didn't pay me anything.",
             "Deep in the oceans, there're lost cities built by an elder race. I wonder how many treasures you can loot there.",
             "Hyperpixels are weird, why even bother with them? Nothing's better than good ol' dubloons anyway!",
-            "Name's <selfname>. A mercenary, a gun freak and just a good penguin.",
+            "Name's <selfname>. A mercenary, a gun freak and just a good Penguin.",
             "Space trains are sorta stupid. Our flying saucers are much better.",
             "What's up with midnight planets? They're so pitch dark you don't see a thing on them!",
             "Me and the boys tried to raid the Ancient Vault once. Let's just say it didn't go well."
@@ -472,13 +472,13 @@
             "Hey bud, you wanna take somethin' cool from those hooded oddballs? Wait til my shift ends, then I may help ya out.",
             "All these glowin' nerds talk about is some ancient races. Seems to be their favorite subject.",
             "Go talk with the hooded pals, they may have a job for ya!",
-            "Another fellow penguin! Welcome aboard, buddy! Would you care for some fresh tuna?",
+            "Another fellow Penguin! Welcome aboard, buddy! Would you care for some fresh tuna?",
             "Some things are better off forgotten, yet these glowing guys over there keep diggin' them up.",
             "The Ancients, K'Rakoths, the Ruin... How do you even keep track on all those countless elder beings?",
             "I used to work for Dreadwing, and compared to these Novakids, he didn't pay me anything.",
             "Deep in the oceans, there're lost cities built by an elder race. I wonder how many treasures you can loot there.",
             "Hyperpixels are weird, why even bother with them? Nothing's better than good ol' dubloons anyway!",
-            "Name's <selfname>. A mercenary, a gun freak and just a good penguin.",
+            "Name's <selfname>. A mercenary, a gun freak and just a good Penguin.",
             "Space trains are sorta stupid. Our flying saucers are much better.",
             "What's up with midnight planets? They're so pitch dark you don't see a thing on them!",
             "Me and the boys tried to raid the Ancient Vault once. Let's just say it didn't go well."
@@ -489,7 +489,7 @@
             "Got anything valuable? Like, you know, precious rocks or ancient pottery? Those guys pay a lot for all that stuff.",
             "Sorry, pal! Gotta sort all that ancient junk by place of origin, no time for small talk!",
             "Ay, if you're here to loot our stuff, at least don't take everything at once, okay?",
-            "Don't you look down on me! I may be short but unlike you, I'm a true penguin! Besides, being tall is overrated!",
+            "Don't you look down on me! I may be short but unlike you, I'm a true Penguin! Besides, being tall is overrated!",
             "All these glowin' nerds talk about is some ancient races. Seems to be their favorite subject.",
             "Go talk with the hooded pals, they may have a job for ya!",
             "Oh hey, a tall one! How's the view up there? Don't bump your head into the roof!",
@@ -498,7 +498,27 @@
             "Lemme guess, your mother's an Avian, eh?",
             "Deep in the oceans, there're lost cities built by an elder race. I wonder how many treasures you can loot there.",
             "Hyperpixels are weird, why even bother with them? Nothing's better than good ol' dubloons anyway!",
-            "Name's <selfname>. A mercenary, a gun freak and just a good penguin.",
+            "Name's <selfname>. A mercenary, a gun freak and just a good Penguin.",
+            "Space trains are sorta stupid. Our flying saucers are much better.",
+            "What's up with midnight planets? They're so pitch dark you don't see a thing on them!",
+            "Me and the boys tried to raid the Ancient Vault once. Let's just say it didn't go well."
+          ],
+          "pandorasboxpenguin" : [
+            "Working for the Relic Seekers isn't easy. You always want to snatch somethin' valuable from them.",
+            "You know how much those junk collectors pay for treasures we find for them? You won't believe if I say!",
+            "Got anything valuable? Like, you know, precious rocks or ancient pottery? Those guys pay a lot for all that stuff.",
+            "Sorry, pal! Gotta sort all that ancient junk by place of origin, no time for small talk!",
+            "Ay, if you're here to loot our stuff, at least don't take everything at once, okay?",
+            "Hey bud, you wanna take somethin' cool from those hooded oddballs? Wait til my shift ends, then I may help ya out.",
+            "All these glowin' nerds talk about is some ancient races. Seems to be their favorite subject.",
+            "Go talk with the hooded pals, they may have a job for ya!",
+            "Another fellow Penguin! Welcome aboard, buddy! Would you care for some fresh tuna?",
+            "Some things are better off forgotten, yet these glowing guys over there keep diggin' them up.",
+            "The Ancients, K'Rakoths, the Ruin... How do you even keep track on all those countless elder beings?",
+            "I used to work for Dreadwing, and compared to these Novakids, he didn't pay me anything.",
+            "Deep in the oceans, there're lost cities built by an elder race. I wonder how many treasures you can loot there.",
+            "Hyperpixels are weird, why even bother with them? Nothing's better than good ol' dubloons anyway!",
+            "Name's <selfname>. A mercenary, a gun freak and just a good Penguin.",
             "Space trains are sorta stupid. Our flying saucers are much better.",
             "What's up with midnight planets? They're so pitch dark you don't see a thing on them!",
             "Me and the boys tried to raid the Ancient Vault once. Let's just say it didn't go well."
@@ -518,27 +538,7 @@
             "A RoboPenguin, you say? Nay, never heard of that.",
             "Deep in the oceans, there're lost cities built by an elder race. I wonder how many treasures you can loot there.",
             "Hyperpixels are weird, why even bother with them? Nothing's better than good ol' dubloons anyway!",
-            "Name's <selfname>. A mercenary, a gun freak and just a good penguin.",
-            "Space trains are sorta stupid. Our flying saucers are much better.",
-            "What's up with midnight planets? They're so pitch dark you don't see a thing on them!",
-            "Me and the boys tried to raid the Ancient Vault once. Let's just say it didn't go well."
-          ],
-	   "pandorasboxpenguin" : [
-            "Working for the Relic Seekers isn't easy. You always want to snatch somethin' valuable from them.",
-            "You know how much those junk collectors pay for treasures we find for them? You won't believe if I say!",
-            "Got anything valuable? Like, you know, precious rocks or ancient pottery? Those guys pay a lot for all that stuff.",
-            "Sorry, pal! Gotta sort all that ancient junk by place of origin, no time for small talk!",
-            "Ay, if you're here to loot our stuff, at least don't take everything at once, okay?",
-            "Hey bud, you wanna take somethin' cool from those hooded oddballs? Wait til my shift ends, then I may help ya out.",
-            "All these glowin' nerds talk about is some ancient races. Seems to be their favorite subject.",
-            "Go talk with the hooded pals, they may have a job for ya!",
-            "Another fellow penguin! Welcome aboard, buddy! Would you care for some fresh tuna?",
-            "Some things are better off forgotten, yet these glowing guys over there keep diggin' them up.",
-            "The Ancients, K'Rakoths, the Ruin... How do you even keep track on all those countless elder beings?",
-            "I used to work for Dreadwing, and compared to these Novakids, he didn't pay me anything.",
-            "Deep in the oceans, there're lost cities built by an elder race. I wonder how many treasures you can loot there.",
-            "Hyperpixels are weird, why even bother with them? Nothing's better than good ol' dubloons anyway!",
-            "Name's <selfname>. A mercenary, a gun freak and just a good penguin.",
+            "Name's <selfname>. A mercenary, a gun freak and just a good Penguin.",
             "Space trains are sorta stupid. Our flying saucers are much better.",
             "What's up with midnight planets? They're so pitch dark you don't see a thing on them!",
             "Me and the boys tried to raid the Ancient Vault once. Let's just say it didn't go well."
