--- a/interface/warping/atprk_relicseekerhquniquetele.config
+++ b/interface/warping/atprk_relicseekerhquniquetele.config
@@ -9,6 +9,13 @@
       "planetName" : "",
       "warpAction" : "OwnShip",
       "icon" : "beamup"
+    },
+    {
+      "name" : "Infinity Maze",
+      "planetName" : "Unknown Pocket Dimension",
+      "warpAction" : "InstanceWorld:atprk_infinitemaze",
+      "prerequisiteQuest" : "atprk_infinitemazequest",
+      "icon" : "atprk_infinitemaze"
     }
   ]
 }
