--- a/dialog/atprk_relicseekercrew.config
+++ b/dialog/atprk_relicseekercrew.config
@@ -141,6 +141,26 @@
             "You know why I joined the Relic Seekers? There're so many gaps in our history that I doubt it's even real.",
             "Wanna join the Relic Seekers? We're lookin' for artifacts t' learn the full history of our Universe and such... No? Okay."
           ],
+          "elunite" : [
+            "Our galaxy's indeed full of mysteries and wonders. You never know what you'll find on other planets!",
+            "Hello, fellow spacer! Got anything unusual? Some ancient relics, maybe?",
+            "What a curious specimen you are. You remind me of those odd creatures who inhabit the Cyberspace.",
+            "I'm a lil' baffled by your race's worldview. What's the point of treatin' life as if it was just a play? It's more serious than that.",
+            "So what are you, like, some kind of a livin' program? No offence, I don't really get it.",
+            "I've had a long chat with an Elunite before and I was left speechless. The concept of everyone being someone else's hosts is difficult to stomach.",
+            "If Elunites are an artificial race, then who created them? Could it be the K'Rakoths who are responsible for their existence?",
+            "Your people must've better memory than us Novakids. Why not join us? You can help us a lot on our journey.",
+            "Space is kinda empty and dispiritin' at times, but if you search long enough, you'll always find somethin' wonderful.",
+            "Do you have your own mech? I thought it ain't easy to afford.",
+            "Many planets have those small ruins on their surface... Who exactly built them, anyway?",
+            "I can't believe how much the elder races've left behind. As if they didn't care about their property at all.",
+            "Why do many space anomalies turn out t' be mundane stations or asteroids? They give us nothin' new and waste our time.",
+            "Ever heard of K'Rakoths? Their race's been puzzlin' us for a while.",
+            "All that stuff 'bout K'Rakoth race still confuses me. What's up with those hypercrates or whatever?",
+            "Learnin' about the races that came before us is excitin' and disturbin' at the same time. How many of 'em were out there?",
+            "You know why I joined the Relic Seekers? There're so many gaps in our history that I doubt it's even real.",
+            "Wanna join the Relic Seekers? We're lookin' for artifacts t' learn the full history of our Universe and such."
+          ],
           "angel" : [
             "Holy Cultivator, a real Angel! Welcome aboard our humble space train! It's an honor t' meet you!",
             "Y'know what kind o' knowledge we can share with an angelic bein'? Good manners. Some o' you could use it.",
@@ -179,6 +199,26 @@
             "Space is kinda empty and dispiritin' at times, but if you search long enough, you'll always find somethin' wonderful.",
             "The Ruin's true origin is shrouded in myths. Go figure how it was really born.",
             "You know why I joined the Relic Seekers? There're so many gaps in our history that I doubt it's even real.",
+            "Wanna join the Relic Seekers? We're lookin' for artifacts t' learn the full history of our Universe and such."
+          ],
+          "pandorasboxsheye" : [
+            "Our galaxy's indeed full of mysteries and wonders. You never know what you'll find on other planets!",
+            "Hello, fellow spacer! Got anything unusual? Some ancient relics, maybe?",
+            "...h-howdy? There's somethin' very... ancient about your look...",
+            "Huh? Who's there?... Oh, there you are. Didn't see you at first.",
+            "I don't recognize yer kind but I can tell you've seen a lot on yer way here.",
+            "The Ancients tried so hard to preserve our galaxy's biodiversity. For all we know, they came up with many backup plans.",
+            "We've been discoverin' many strange boxes lately. Their materials suggest that they're as old as the Ancients' ruins...",
+            "Oh hello there! We don't see many Sheyes 'round these parts! How can I help you?",
+            "Quite a number of ancient murals refers t' some kind of \"life keepers\". Do you happen t' know anything 'bout this?",
+            "The Ruin's true origin is shrouded in myths. Go figure how it was really born.",
+            "Howdy, my name is <selfname>. Pleased to meet yet another curious spacefarer!",
+            "Space is kinda empty and dispiritin' at times, but if you search long enough, you'll always find somethin' wonderful.",
+            "All that stuff 'bout K'Rakoth race still confuses me. What's up with those hypercrates or whatever?",
+            "Ever heard of K'Rakoths? Their race's been puzzlin' us for a while.",
+            "You know there's an elder race of aquatic squids out there? Forgot their name, though... again...",
+            "I can't believe how much the elder races've left behind. As if they didn't care about their property at all.",
+            "Many planets have those small ruins on their surface... Who exactly built them, anyway?",
             "Wanna join the Relic Seekers? We're lookin' for artifacts t' learn the full history of our Universe and such."
           ],
           "peglaci" : [
