--- a/dialog/atprk_relicseekercrew.config
+++ b/dialog/atprk_relicseekercrew.config
@@ -144,7 +144,7 @@
           "elunite" : [
             "Our galaxy's indeed full of mysteries and wonders. You never know what you'll find on other planets!",
             "Hello, fellow spacer! Got anything unusual? Some ancient relics, maybe?",
-            "What a curious specimen you are. You remind me of those odd creatures who inhabit the Cyberspace.",
+            "What a curious specimen you are. You remind me of those odd creatures who inhabit cyberspace.",
             "I'm a lil' baffled by your race's worldview. What's the point of treatin' life as if it was just a play? It's more serious than that.",
             "So what are you, like, some kind of a livin' program? No offence, I don't really get it.",
             "I've had a long chat with an Elunite before and I was left speechless. The concept of everyone being someone else's hosts is difficult to stomach.",
