--- a/dialog/atprk_relicseekercrew.config
+++ b/dialog/atprk_relicseekercrew.config
@@ -107,7 +107,7 @@
             "Many planets have those small ruins on their surface... Who exactly built them, anyway?",
             "You metal guys seem to explore the galaxy as often as we do. We should share notes one day, I'm tellin' you.",
             "How lucky we are to have a friendly NostOS aboard our space train! Mind answering some questions?",
-            "The Architect's story sounds a bit similar to the Cultivator's. Could they be one and the same?",
+            "The Architect's story sounds a bit similar to the Cultivator's. Could they be related at all?",
             "You look very familiar, buddy, as if I've seen you before... Not sure if my memory serves me right, though.",
             "You know there's an elder race of aquatic squids out there? Forgot their name, though... again...",
             "All that stuff 'bout K'Rakoth race still confuses me. What's up with those hypercrates or whatever?",
