--- a/interface/atprk_place4drift/atprk_place4drift.config
+++ b/interface/atprk_place4drift/atprk_place4drift.config
@@ -257,8 +257,8 @@
     "failColor" : [255, 0, 0],
     "failText" : "^red;Unable to establish high-bandwidth connection to S.A.I.L\nTry again from your ship",
 
-    "successColor" : [255, 0, 255],
-    "successText" : "^#ff00ff;High-bandwidth connection established\nTransferring system data"
+    "successColor" : [0, 255, 0],
+    "successText" : "^#00ff00;High-bandwidth connection established\nTransferring system data"
   },
 
   "extraOrbitPadding" : 0.0,
@@ -277,7 +277,7 @@
     "dispatching" : "^#ff00ff;Requesting probe dispatch",
     "traveling" : "^#ff00ff;Probe dispatched.\nProbe approaching target orbit",
     "deploying" : "^#ff00ff;Probe has reached target orbit.\nOpening tunnel",
-    "deployed" : "^#ff00ff;Tunnel opened",
+    "deployed" : "^#00ff00;Tunnel opened",
     "error" : "Error deploying probe. \nConnection lost..."
   },
 
