Making Colt's 2nd quest less painful
"You know what? Just translate these codices back, what's the problem?"

--- a/interface/windowconfig/atprk_translator.config
+++ b/interface/windowconfig/atprk_translator.config
@@ -193,6 +193,12 @@
       "position" : [50, 221],
       "zlevel" : 3
     },
+    "lblSmallTab" : {
+      "type" : "image",
+      "file" : "/interface/crafting/atprk_tabicon_translateback.png",
+      "position" : [76, 221],
+      "zlevel" : 3
+    },
     "categories" : {
       "type" : "radioGroup",
       "toggleMode" : false,
@@ -212,6 +218,14 @@
           "baseImageChecked" : "/interface/crafting/selectedTab.png",
           "data" : {
             "filter" : [ "atprk_translaterishaan" ]
+          }
+        },
+        {
+          "position" : [72, 221],
+          "baseImage" : "/interface/crafting/unselectedTab.png",
+          "baseImageChecked" : "/interface/crafting/selectedTab.png",
+          "data" : {
+            "filter" : [ "atprk_translateback" ]
           }
         }
       ]
