--- a/interface/confirmation/atprk_teleportconfirmation.config
+++ b/interface/confirmation/atprk_teleportconfirmation.config
@@ -5,12 +5,75 @@
     "title" : "Teleport Confirmation",
     "subtitle" : "Cryogenic Tomb",
     "message" : "\n\nReady to explore the Cryogenic Tomb?\n^red;You'll want to have very good equipment for this.",
+    "okCaption" : "Ready",
     "cancelCaption" : "Not now",
     "images" : {
       "portrait" : [ {"image" : "/objects/atprk_relicseeker/atprk_relicseekerlibra/atprk_libraportrait2.png"} ]
     },
     "labels" : {
-      "name" : "Libra Eclipse"
+      "name" : "Libra"
+    }
+  },
+
+  "atprk_4drifttutorial" : {
+    "paneLayout" : "/interface/windowconfig/portraitconfirmation.config:paneLayout",
+    "icon" : "/interface/warping/icon.png",
+    "title" : "Teleport Confirmation",
+    "subtitle" : "Stable Dimensional Tunnel",
+    "message" : "\n\nAre you ready for me to deploy you to the ^orange;dimensional tunnel^white;? \n^red;Don't forget to equip the ^orange;Riftdiver mech body^red;, a mining tool, and a ranged weapon!",
+    "okCaption" : "Ready",
+    "cancelCaption" : "Not now",
+    "images" : {
+      "portrait" : [ {"image" : "/quests/outpost/penguinscientistportrait.png"} ]
+    },
+    "labels" : {
+      "name" : "Dr. Akaggy"
+    }
+  },
+
+  "atprk_mechbotchallenge1" : {
+    "paneLayout" : "/interface/windowconfig/portraitconfirmation.config:paneLayout",
+    "icon" : "/interface/warping/icon.png",
+    "title" : "Teleport Confirmation",
+    "subtitle" : "Buried Fenron Ziggurat",
+    "message" : "\n\nAre you ready?\n^red;You'll have to pilot a mech with a predetermined loadout.",
+    "okCaption" : "Ready",
+    "cancelCaption" : "Not now",
+    "images" : {
+      "portrait" : [ {"image" : "/objects/atprk_relicseeker/atprk_mechbotrandy/atprk_randyportrait1.png"} ]
+    },
+    "labels" : {
+      "name" : "Randy"
+    }
+  },
+  "atprk_mechbotchallenge2" : {
+    "paneLayout" : "/interface/windowconfig/portraitconfirmation.config:paneLayout",
+    "icon" : "/interface/warping/icon.png",
+    "title" : "Teleport Confirmation",
+    "subtitle" : "Noolith Observatory",
+    "message" : "\n\nAre you prepared?\n^red;You'll have to pilot a mech with a predetermined loadout.",
+    "okCaption" : "Ready",
+    "cancelCaption" : "Not now",
+    "images" : {
+      "portrait" : [ {"image" : "/objects/atprk_relicseeker/atprk_mechbotrandy/atprk_randyportrait1.png"} ]
+    },
+    "labels" : {
+      "name" : "Randy"
+    }
+  },
+  "atprk_mechbotchallenge3" : {
+    "paneLayout" : "/interface/windowconfig/portraitconfirmation.config:paneLayout",
+    "icon" : "/interface/warping/icon.png",
+    "title" : "Teleport Confirmation",
+    "subtitle" : "Annelisk Mining Station",
+    "message" : "\n\nReady to go?\n^red;You'll have to pilot a mech with a predetermined loadout.",
+    "okCaption" : "Ready",
+    "cancelCaption" : "Not now",
+    "images" : {
+      "portrait" : [ {"image" : "/objects/atprk_relicseeker/atprk_mechbotrandy/atprk_randyportrait1.png"} ]
+    },
+    "labels" : {
+      "name" : "Randy"
     }
   }
 }
