--- a/interface/confirmation/atprk_teleportconfirmation.config
+++ b/interface/confirmation/atprk_teleportconfirmation.config
@@ -50,7 +50,7 @@
     "paneLayout" : "/interface/windowconfig/portraitconfirmation.config:paneLayout",
     "icon" : "/interface/warping/icon.png",
     "title" : "Teleport Confirmation",
-    "subtitle" : "Noolith Observatory",
+    "subtitle" : "Orbital Noolith Observatory",
     "message" : "\n\nAre you prepared?\n^red;You'll have to pilot a mech with a predetermined loadout.",
     "okCaption" : "Ready",
     "cancelCaption" : "Not now",
