--- a/interface/windowconfig/atprk_codexrestorer.config
+++ b/interface/windowconfig/atprk_codexrestorer.config
@@ -1,13 +1,13 @@
 {
-  "filter" : [ "atprk_4dcrafting" ],
+  "filter" : ["atprk_codexrestorer"],
   "titleFromEntity" : true,
-  "requiresBlueprint" : true,
-  "craftingSound" : "/sfx/interface/crafting_tech2.ogg",
+  "requiresBlueprint" : false,
+  "craftingSound" : "/sfx/interface/stationtransponder_startup.ogg",
   "paneLayout" : {
     "background" : {
       "type" : "background",
       "fileHeader" : "/interface/crafting/craftingheader.png",
-      "fileBody" : "/interface/crafting/atprk_4dcraftingbody.png",
+      "fileBody" : "/interface/crafting/atprk_codexrestorerbody.png",
       "fileFooter" : "/interface/crafting/craftingfooter.png"
     },
     "close" : {
@@ -20,12 +20,12 @@
     },
     "windowtitle" : {
       "type" : "title",
-      "title" : "Dimensional Compressor",
-      "subtitle" : "Think outside the third dimension",
-      "position" : [0, 252],
+      "title" : "K'Rakothan Defragmentator",
+      "subtitle" : "No knowledge is truely lost forever",
+      "position" : [-5, 252],
       "icon" : {
         "type" : "image",
-        "file" : "/interface/crafting/atprk_4dcraftingicon.png",
+        "file" : "/interface/crafting/atprk_translatoricon.png",
         "position" : [0, -20],
         "zlevel" : -1
       }
@@ -45,13 +45,13 @@
     },
     "lblSchematics" : {
       "type" : "label",
-      "position" : [88, 244],
+      "position" : [88, 245],
       "hAnchor" : "mid",
       "value" : "^#b9b5b2;BLUEPRINTS"
     },
     "lblProducttitle" : {
       "type" : "label",
-      "position" : [265, 244],
+      "position" : [265, 245],
       "hAnchor" : "mid",
       "value" : "^#b9b5b2;PRODUCT"
     },
@@ -86,7 +86,7 @@
       "base" : "/interface/buttonactive.png",
       "hover" : "/interface/buttonactivehover.png",
       "position" : [271, 43],
-      "caption" : "Cancel"
+      "caption" : "Stop"
     },
     "imgCraftBg" : {
       "type" : "image",
@@ -111,27 +111,12 @@
       "type" : "label",
       "position" : [51, 58],
       "hAnchor" : "left",
-      "value" : "MATERIALS AVAILABLE"
-    },
-
-    "description" : {
-      "type" : "widget",
-      "position" : [190, 41],
-      "size" : [140, 220]
-    },
-    "filter" : {
-      "type" : "textbox",
-      "position" : [60, 43],
-      "hint" : "Search",
-      "maxWidth" : 70,
-      "escapeKey" : "close",
-      "enterKey" : "filter",
-      "focus" : false
+      "value" : "ENTRIES AVAILABLE"
     },
 
     "scrollArea" : {
       "type" : "scrollArea",
-      "rect" : [5, 69, 174, 221],
+      "rect" : [5, 69, 174, 230],
       "children" : {
         "itemList" : {
           "type" : "list",
@@ -159,6 +144,12 @@
                 "position" : [3, 1],
                 "callback" : "null"
               },
+              "newIcon" : {
+                "type" : "image",
+                "position" : [119, 5],
+                "file" : "/interface/crafting/new.png",
+                "zlevel" : 2
+              },
               "moneyIcon" : {
                 "type" : "image",
                 "position" : [122, 1],
@@ -181,53 +172,24 @@
         }
       }
     },
-    "lblBarTab" : {
-      "type" : "image",
-      "file" : "/interface/crafting/atprk_tabicon_4dmain.png",
-      "position" : [24, 221],
-      "zlevel" : 3
+    "description" : {
+      "type" : "widget",
+      "position" : [190, 41],
+      "size" : [140, 220]
     },
-    "lblMatTab" : {
-      "type" : "image",
-      "file" : "/interface/crafting/atprk_tabicon_4dprops.png",
-      "position" : [50, 221],
-      "zlevel" : 3
-    },
-    "lblSmallTab" : {
-      "type" : "image",
-      "file" : "/interface/crafting/atprk_tabicon_4dsmaller.png",
-      "position" : [76, 221],
-      "zlevel" : 3
+    "filter" : {
+      "type" : "textbox",
+      "position" : [60, 43],
+      "hint" : "Search",
+      "maxWidth" : 70,
+      "escapeKey" : "close",
+      "enterKey" : "filter",
+      "focus" : true
     },
     "categories" : {
       "type" : "radioGroup",
-      "toggleMode" : false,
+      "toggleMode" : true,
       "buttons" : [
-        {
-          "selected" : true,
-          "position" : [18, 221],
-          "baseImage" : "/interface/crafting/unselectedTab.png",
-          "baseImageChecked" : "/interface/crafting/selectedTab.png",
-          "data" : {
-            "filter" : [ "atprk_4dmain" ]
-          }
-        },
-        {
-          "position" : [45, 221],
-          "baseImage" : "/interface/crafting/unselectedTab.png",
-          "baseImageChecked" : "/interface/crafting/selectedTab.png",
-          "data" : {
-            "filter" : [ "atprk_4dprops" ]
-          }
-        },
-        {
-          "position" : [72, 221],
-          "baseImage" : "/interface/crafting/unselectedTab.png",
-          "baseImageChecked" : "/interface/crafting/selectedTab.png",
-          "data" : {
-            "filter" : [ "atprk_4dsmaller" ]
-          }
-        }
       ]
     },
     "rarities" : {
