--- a/interface/windowconfig/atprk_experimentalterraforming.config
+++ b/interface/windowconfig/atprk_experimentalterraforming.config
@@ -19,8 +19,8 @@
     },
     "windowtitle" : {
       "type" : "title",
-      "title" : "  Experimental Microforming Station",
-      "subtitle" : "  Create unique mini-biomes!",
+      "title" : "Experimental Microforming Station",
+      "subtitle" : "Create unique mini-biomes!",
       "position" : [-5, 252],
       "icon" : {
         "type" : "image",
@@ -33,7 +33,7 @@
       "type" : "label",
       "position" : [88, 225],
       "hAnchor" : "mid",
-      "value" : "^#b9b5b2;SCHEMATICS"
+      "value" : "^#b9b5b2;BLUEPRINTS"
     },
     "lblProducttitle" : {
       "type" : "label",
